tests/testfiles/valid_prog_fails/5_bit_or.c
int main() {
    int x = 0b0000000000000001;
    return x;
}