tests/testfiles/invalid_prog_fails/18_mod_empty.c
int main() {
    int x = 34;
    int res = x % ;

    return res;
}